# cro

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  c_cpp_properties.json  vcpkg.json
include/cro/: cli.hpp  core.hpp  db.hpp  exercise.hpp  tui.hpp  version.hpp.in
src/: cli.cpp  main.cpp  tui.cpp
src/core/: config.cpp  db.cpp  exercise.cpp
